--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+.body {
       background-color: #ffe4eb; /* Light pink */
       color: #333;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -16,7 +16,7 @@ body {
       color: #ffb6c1;
       text-decoration: underline;
     }
-    footer {
+    .footer {
 background-color: #C71585;
       color: #ffffff;
       padding: 1rem 0;
