--- a/style.css
+++ b/style.css
@@ -24,3 +24,27 @@ background-color: #C71585;
       font-size: 0.9rem;
       margin-top: 3rem;
     }
+.blog-image {
+      width: 100%;
+      height: auto;
+      border-radius: 0.5rem;
+      object-fit: cover;
+      box-shadow: 0 4px 8px rgb(0 0 0 / 0.1);
+    }
+    .blog-intro {
+      font-size: 1.125rem;
+      line-height: 1.5;
+      color: #4a4a4a;
+      margin-bottom: 1rem;
+    }
+    .img-fluid-wrapper {
+      overflow: hidden;
+      border-radius: 0.5rem;
+    }
+    h1, h2 {
+      color: #bb2d55;
+    }
+    .table thead {
+      background-color: #C71585;
+      color: #fff;
+    }
