--- a/styles.css
+++ b/styles.css
@@ -159,4 +159,11 @@ background-color: #C71585;
       box-shadow: 0 6px 15px rgb(72 180 97 / 0.3);
       font-size: 1.25rem;
       color: #198754;
+    }
+     a.text-decoration-none:hover h5 {
+  color: #C71585;
+  text-decoration: underline;
+}
+ 
+      
       
