--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
-.body {
+body {
       background-color: #ffe4eb;
       color: #333;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin:0;
-      padding:;
+      padding:0;
     }
     nav.navbar-dark {
       background-color: #C71585 !important; 
@@ -15,9 +15,10 @@
     }
 nav.navbar-dark .nav-link:visited{
       color: #ffb6c1;
+}
     nav.navbar-dark .navbar-nav .nav-link:hover,
     nav.navbar-dark .navbar-nav .nav-link:focus
-     nav.navbar-dark .nav-link.active  {
+    nav.navbar-dark .navbar-nav .nav-link.active  {
       color: #ffb6c1;
       text-decoration: underline;
     }
@@ -67,7 +68,7 @@ background-color: #C71585;
       color: #bb2d55;
     }
       h2 {
-            font-weight:700
+            font-weight:700;
             margin-bottom:1rem;
 }
             
