--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,11 @@ background-color: #C71585;
     .class-card:hover {
       box-shadow: 0 6px 14px rgb(255 105 180 / 0.6);
     }
+     .card-img-top {
+  height: 200px;
+  object-fit: cover;
+}
+
     .age-note {
       font-size: 0.9rem;
       color: #d6336c;
